--- a/src/app/cart/cart.html
+++ b/src/app/cart/cart.html
@@ -65,8 +65,7 @@
             @if (checkingOut()) {
               Naručivanje...
             } @else {
-              <mat-icon>shopping_bag</mat-icon>
-              Naruči
+              <span><mat-icon>shopping_bag</mat-icon>Naruči</span>
             }
           </button>
         </div>
