--- a/src/styles.css
+++ b/src/styles.css
@@ -47,6 +47,46 @@ input.mat-mdc-input-element {
     margin-right: 0.3rem;
 }
 
+.item-toy-card.custom-rounded-styling .description-text {
+  text-align: center;
+  display: block;
+}
+
+.item-toy-card.custom-rounded-styling .price-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 2rem;
+}
+
+.item-toy-card.custom-rounded-styling .mat-mdc-card-title {
+    font-size: 20px;
+    line-height: 1.2;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.item-toy-card.custom-rounded-styling .description-text {
+    margin-top: 5px;
+    font-size: 13px;
+    line-height: 1.2;
+    display: block;
+    height: 2.5rem;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.item-toy-card.custom-rounded-styling .mat-mdc-card-header {
+  justify-content: center;
+}
+
+.item-toy-card.custom-rounded-styling .mat-mdc-card-title {
+  text-align: center;
+  width: 100%;
+  display: block;
+}
+
 .button {
     background-color: #F45296;
     color: #FFEFC0;
