--- a/src/app/home/home.css
+++ b/src/app/home/home.css
@@ -66,15 +66,14 @@ h1 {
 
 .age-icon {
     cursor: pointer;
-    transition: transform 0.2s, filter 0.2s;
+    transition: transform 0.2s ease-out, filter 0.2s ease-in-out;
 }
 
 .age-icon:hover {
-    transform: scale(1.1);
-    filter: brightness(1.1);
+    filter: brightness(1.01) drop-shadow(0px 7px 5px rgba(22, 13, 26, 0.075));
+    transform: scale(1.03) translateY(-5px);
 }
 
-/* Carousel content */
 #carousel mat-card-content {
     display: flex;
     gap: 1rem;
@@ -99,7 +98,7 @@ h1 {
 }
 
 .toy-card mat-card-title {
-    font-size: 0.95rem;
+    font-size: 1rem;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
